crates/quarto-highlight/tests/integration/snapshots/integration__golden__javascript.snap
---
source: crates/quarto-highlight/tests/golden.rs
description: "const add = (a, b) => a + b;\n"
---
[
  [
    0,
    5,
    "keyword"
  ],
  [
    6,
    9,
    "function"
  ],
  [
    10,
    11,
    "operator"
  ],
  [
    12,
    13,
    "punctuation.bracket"
  ],
  [
    13,
    14,
    "variable"
  ],
  [
    14,
    15,
    "punctuation.delimiter"
  ],
  [
    16,
    17,
    "variable"
  ],
  [
    17,
    18,
    "punctuation.bracket"
  ],
  [
    19,
    21,
    "operator"
  ],
  [
    22,
    23,
    "variable"
  ],
  [
    24,
    25,
    "operator"
  ],
  [
    26,
    27,
    "variable"
  ],
  [
    27,
    28,
    "punctuation.delimiter"
  ]
]
