crates/quarto-highlight/tests/integration/snapshots/integration__golden__javascript_jsx_alias.snap
---
source: crates/quarto-highlight/tests/golden.rs
description: "const el = <div title=\"hi\">{name}</div>;\n"
---
[
  [
    0,
    5,
    "keyword"
  ],
  [
    6,
    8,
    "variable"
  ],
  [
    9,
    10,
    "operator"
  ],
  [
    11,
    12,
    "punctuation.bracket"
  ],
  [
    12,
    15,
    "tag"
  ],
  [
    16,
    21,
    "attribute"
  ],
  [
    21,
    22,
    "operator"
  ],
  [
    22,
    26,
    "string"
  ],
  [
    26,
    27,
    "punctuation.bracket"
  ],
  [
    27,
    28,
    "punctuation.bracket"
  ],
  [
    28,
    32,
    "variable"
  ],
  [
    32,
    33,
    "punctuation.bracket"
  ],
  [
    33,
    35,
    "punctuation.bracket"
  ],
  [
    35,
    38,
    "tag"
  ],
  [
    38,
    39,
    "punctuation.bracket"
  ],
  [
    39,
    40,
    "punctuation.delimiter"
  ]
]
