crates/quarto-highlight/tests/integration/snapshots/integration__golden__json.snap
---
source: crates/quarto-highlight/tests/golden.rs
description: "{\"n\": 1, \"s\": \"x\"}\n"
---
[
  [
    1,
    4,
    "string"
  ],
  [
    6,
    7,
    "number"
  ],
  [
    9,
    12,
    "string"
  ],
  [
    14,
    17,
    "string"
  ]
]
