crates/quarto-highlight/tests/integration/snapshots/integration__golden__lua.snap
---
source: crates/quarto-highlight/tests/golden.rs
description: "local function greet(name)\n  print(\"hi, \" .. name)\nend\n"
---
[
  [
    0,
    5,
    "keyword"
  ],
  [
    6,
    14,
    "keyword.function"
  ],
  [
    15,
    20,
    "function"
  ],
  [
    20,
    21,
    "punctuation.bracket"
  ],
  [
    21,
    25,
    "parameter"
  ],
  [
    25,
    26,
    "punctuation.bracket"
  ],
  [
    29,
    34,
    "function.builtin"
  ],
  [
    34,
    35,
    "punctuation.bracket"
  ],
  [
    35,
    41,
    "string"
  ],
  [
    42,
    44,
    "operator"
  ],
  [
    45,
    49,
    "variable"
  ],
  [
    49,
    50,
    "punctuation.bracket"
  ],
  [
    51,
    54,
    "keyword.function"
  ]
]
