crates/quarto-highlight/tests/integration/snapshots/integration__golden__rust.snap
---
source: crates/quarto-highlight/tests/integration/golden.rs
description: "/// Greets.\nfn greet(name: &str) -> String {\n    format!(\"hi, {name}\")\n}\n"
---
[
  [
    0,
    12,
    "comment.documentation"
  ],
  [
    12,
    14,
    "keyword"
  ],
  [
    15,
    20,
    "function"
  ],
  [
    20,
    21,
    "punctuation.bracket"
  ],
  [
    21,
    25,
    "variable.parameter"
  ],
  [
    25,
    26,
    "punctuation.delimiter"
  ],
  [
    27,
    28,
    "operator"
  ],
  [
    28,
    31,
    "type.builtin"
  ],
  [
    31,
    32,
    "punctuation.bracket"
  ],
  [
    36,
    42,
    "type"
  ],
  [
    43,
    44,
    "punctuation.bracket"
  ],
  [
    49,
    55,
    "function.macro"
  ],
  [
    55,
    56,
    "function.macro"
  ],
  [
    56,
    57,
    "punctuation.bracket"
  ],
  [
    57,
    69,
    "string"
  ],
  [
    69,
    70,
    "punctuation.bracket"
  ],
  [
    71,
    72,
    "punctuation.bracket"
  ]
]
